apps/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    environment: dev
    team: devops
  annotations:
    owner: "Prashanth"
    purpose: "Namespace for monitoring tools like Prometheus and Grafana"
